--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-streamlit
-pandas
-numpy
-plotly
-folium
-streamlit-folium
-streamlit-authenticator
-streamlit-option-menu
-PyYAML
-qrcode
-Pillow
-scikit-learn
+streamlit>=1.24.0
+pandas>=1.5.0
+numpy>=1.23.0
+plotly>=5.13.0
+folium>=0.14.0
+streamlit-folium>=0.11.0
+streamlit-option-menu>=0.3.2
+pillow>=9.4.0
+qrcode>=7.3.1
+scikit-learn>=1.0.2
+python-dateutil>=2.8.2
+geopy>=2.3.0
+plotly-express>=0.4.1
